@@ -6785,6 +6785,68 @@ operator|.
 name|getConfiguration
 argument_list|()
 decl_stmt|;
+comment|// check if the job classloader is enabled and verify the TCCL
+if|if
+condition|(
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|MRJobConfig
+operator|.
+name|MAPREDUCE_JOB_CLASSLOADER
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
+name|ClassLoader
+name|tccl
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|getContextClassLoader
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|tccl
+operator|instanceof
+name|ApplicationClassLoader
+operator|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"TCCL expected: "
+operator|+
+name|ApplicationClassLoader
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|", actual: "
+operator|+
+name|tccl
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+throw|;
+block|}
+block|}
 specifier|final
 name|String
 name|ioSortMb
